@@ -30,6 +30,7 @@ CORRUPT_RPM = 11
 UNAUTHENTICATED_RPM = 12
 INVALID_IMPORT = 13
 IMPORT_PASSPHRASE_ERROR = 14
+DECRYPT_FAILED = 15
 
 _messages = {
     OK: 'No error',
@@ -47,6 +48,7 @@ _messages = {
     UNAUTHENTICATED_RPM: 'Missing RPM file authentication by client',
     INVALID_IMPORT: 'Invalid import file',
     IMPORT_PASSPHRASE_ERROR: 'Import passphrase does not match',
+    DECRYPT_FAILED: 'Decryption failed',
 }
 
 
