@@ -1,0 +1,12 @@
+-----BEGIN PGP MESSAGE-----
+
+hQEMA51KpmxgEb/6AQf9Gr9rDREQrjKyzbguQfdnuxDxU3+TURL1gScgMHok+ihK
+2aWYimH/Y3Wk1JM6tjVVEFYwLQSfn/dcMBi5vxpYbSvjk8nEzi/vbJ/y0vPtLRxg
+fV9U+kqPavoQIVh1a5R9C5LImCaEieV6nPlywlLLljv8jeiRrexKyYDZlbfllCMG
+rdoowIn2tTvAu52ujczcHdSJ40kxpB7TNDhYe3gsHz6bpY1SxhwWaHnNreBB9H8T
+5rvFIlo2F4We1q7hTgmWSXu0UhkYrVmKxSXx/aa0+Qa6IvnTYNnc2i+g0JWDzJih
+bLY4jO+MG+S0Ttf6Ycqjve3R8AsCLfUKnNUgbdG2g9JNAUwyI868CJzwS4kkrFzj
+bIRk18Ebw5gMBypCOC8dJNiWjbcvirkLrmPdhFOB3EnSoU+z5nGHkvSCDdK6zUhv
+7Ge0n5Kb0cMmzuS5hSY=
+=HpvF
+-----END PGP MESSAGE-----
