@@ -1,0 +1,12 @@
+-----BEGIN PGP MESSAGE-----
+
+hQEMA5s2fFaYj3u0AQgAnJfGuIR9kDYZ9ik4rJa9BxkayftiJc8ua8SUxOVkXuCS
+DbocUEYeWViDY/s7M/6cHcGydcyKzyj8HtOZOjMxvMq19mfE4D7yqGZbYK1UUepu
+GTeU51j7l45229PymMmIjtEQgxX1gjxMdOjFcbLGSmpwQx40/fmLuPcFNBirP8Lk
+WZlmjtUy+RezZqzYE9GNKinypiUeKhqRbKlMm7w9Y1C7DQg7hVoTB+NcLB/gtenq
+/uK+daxPsnXHqjERIIe696LCc6NUfJw+OewSBMBqgo63YdHzPIfmzWLYXTYVnjo+
+X1a40Xjk5rTV0sNdXWuVMS3gJGoAojWjyiz3556IvNJdAZGmWLbzaxEP7s/iVhWc
+engZiOd6tJuOLg9YwYeiUU/GpvnoAesTJUFgO5H/A7RcnHRue9Mt0i6+9mDDoMG6
+JpfhyWXTDfOxscGwphT0oa4UOb9n2whIWxkBIpkL
+=j1Ds
+-----END PGP MESSAGE-----
